--- a/CSS - My Site/css/style.css
+++ b/CSS - My Site/css/style.css
@@ -38,6 +38,14 @@ hr {
   margin: 100px auto;
 }
 
+a {
+  color: #11999E;
+}
+
+a:hover {
+  color: #EAF6F6;
+}
+
 .top-container {
   background-color: azure;
   position: relative;
@@ -49,7 +57,8 @@ hr {
 }
 
 .bottom-container {
-
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
 }
 
 .profile {
@@ -90,4 +99,31 @@ hr {
 .contact-me {
   width: 40%;
   margin: 40px auto 60px;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11cdd4);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11cdd4);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11cdd4);
+  background-image: -o-linear-gradient(top, #11cdd4, #11cdd4);
+  background-image: linear-gradient(to bottom, #11cdd4, #11cdd4);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #11999e;
+  background-image: -webkit-linear-gradient(top, #11999e, #11999e);
+  background-image: -moz-linear-gradient(top, #11999e, #11999e);
+  background-image: -ms-linear-gradient(top, #11999e, #11999e);
+  background-image: -o-linear-gradient(top, #11999e, #11999e);
+  background-image: linear-gradient(to bottom, #11999e, #11999e);
+  text-decoration: none;
 }
