--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -1,11 +1,22 @@
+
 #title {
   background-color: #ff4c68;
+  color: #fff;
 }
 
 .container-fluid {
   padding: 3% 15%;
 }
 
+.navbar-brand {
+  font-family: 'Ubuntu';
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.navbar {
+  padding-bottom: 4.5rem;
+}
 
 h1 {
   font-family: 'Montserrat-Black', sans-serif;
