--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -15,12 +15,57 @@
 }
 
 .navbar {
-  padding-bottom: 4.5rem;
+  padding: 0 0 4.5rem;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: 'Montserrat';
+}
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
 }
 
 h1 {
   font-family: 'Montserrat-Black', sans-serif;
-  size: 3rem;
+  size: 3.5rem;
   line-height: 1.5;
+  font-weight: 800;
 }
 
+h3 {
+  font-family: 'Montserrat';
+  font-weight: 600;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+
+/* feature section */
+
+#features {
+
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
