--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -33,15 +33,15 @@
 }
 
 h1 {
-  font-family: 'Montserrat-Black', sans-serif;
-  size: 3.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3.5rem;
   line-height: 1.5;
-  font-weight: 800;
+  font-weight: 900;
 }
 
 h3 {
   font-family: 'Montserrat';
-  font-weight: 600;
+  font-weight: 700;
 }
 
 p {
