--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -39,6 +39,13 @@ h1 {
   font-weight: 900;
 }
 
+h2 {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 700;
+}
+
 h3 {
   font-family: 'Montserrat';
   font-weight: 700;
@@ -68,4 +75,31 @@ p {
 
 .icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 12%;
+  margin: 20px 20px 50px;
 }
