--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -117,3 +117,15 @@ p {
 .pricing-column {
   padding: 3% 2%;
 }
+
+
+@media (max-width: 1028px){
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate();
+  }
+}
