--- a/Bootstrap/TinDog-Start/css/styles.css
+++ b/Bootstrap/TinDog-Start/css/styles.css
@@ -31,6 +31,17 @@ p {
   padding: 7% 15%;
 }
 
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
+}
+
 /* Navigation Bar */
 
 .navbar-brand {
@@ -54,14 +65,9 @@ p {
 
 /* Title Section */
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-  text-align: left;
-}
-
 #title .container-fluid {
   padding: 3% 7% 15%;
+  text-align: left;
 }
 
 .title-image {
@@ -71,7 +77,7 @@ p {
   right: 30%;
 }
 
-/* Feature section */
+/* Feature Section */
 
 #features {
   background-color: #fff;
@@ -99,7 +105,6 @@ p {
 
 #testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-text {
@@ -140,10 +145,6 @@ p {
 
 /* CTA Section */
 
-#cta {
-  background-color: #ff4c68;
-  color: #fff;
-}
 
 /* Footer Section */
 
